<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".iu.view.datosContacto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ImageView
        android:id="@+id/img_foto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/perfil"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="10dp"/>
    <TextView
        android:id="@+id/L_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LNombre"
        app:layout_constraintTop_toBottomOf="@id/img_foto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et_nombre"
        app:layout_constraintBottom_toTopOf="@id/et_apellidoP"/>
    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/INombre"
        app:layout_constraintTop_toBottomOf="@id/img_foto"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/L_nombre"
        app:layout_constraintBottom_toTopOf="@id/et_apellidoP"/>
    <TextView
        android:id="@+id/L_apellidoP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LApellidoPat"
        app:layout_constraintTop_toBottomOf="@id/L_nombre"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et_apellidoP"
        app:layout_constraintBottom_toTopOf="@id/et_apellidoM"/>
    <EditText
        android:id="@+id/et_apellidoP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/IApellidoPat"
        app:layout_constraintTop_toBottomOf="@id/et_nombre"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/L_apellidoP"
        app:layout_constraintBottom_toTopOf="@id/et_apellidoM" />
    <TextView
        android:id="@+id/L_apellidoM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LApellidoMat"
        app:layout_constraintTop_toBottomOf="@id/L_apellidoP"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et_apellidoM"
        app:layout_constraintBottom_toTopOf="@id/L_edad"
        />
    <EditText
        android:id="@+id/et_apellidoM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/IApellidoMat"
        app:layout_constraintTop_toBottomOf="@id/et_apellidoP"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/L_apellidoP"
        app:layout_constraintBottom_toTopOf="@id/et_Edad"/>
    <TextView
        android:id="@+id/L_edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LEdad"
        app:layout_constraintTop_toBottomOf="@id/L_apellidoM"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et_Edad"
        app:layout_constraintBottom_toTopOf="@id/L_Telefono"/>
    <EditText
        android:id="@+id/et_Edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/IEdad"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintTop_toBottomOf="@id/et_apellidoM"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/L_edad"
        app:layout_constraintBottom_toTopOf="@id/et_Telefono"/>
    <TextView
        android:id="@+id/L_Telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LTele"
        app:layout_constraintTop_toBottomOf="@id/L_edad"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et_Telefono"
        app:layout_constraintBottom_toTopOf="@id/L_Sexo"/>
    <EditText
        android:id="@+id/et_Telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ITele"
        android:inputType="phone"
        android:maxLength="10"
        app:layout_constraintTop_toBottomOf="@id/et_Edad"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/L_Telefono"
        app:layout_constraintBottom_toTopOf="@id/et_Sexo"/>
    <TextView
        android:id="@+id/L_Sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LSexo"
        app:layout_constraintTop_toBottomOf="@id/L_Telefono"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et_Sexo"
        app:layout_constraintBottom_toTopOf="@id/btn_guardar"/>
        <Spinner
            android:id="@+id/et_Sexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_Telefono"
            app:layout_constraintRight_toRightOf="parent"
            android:labelFor="@id/et_Sexo"
            app:layout_constraintLeft_toRightOf="@id/L_Sexo"
            app:layout_constraintBottom_toTopOf="@id/btn_guardar"/>


        <!--
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_Sexo"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/label"
                    app:layout_constraintTop_toBottomOf="@id/et_Telefono"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/L_Sexo"
                    app:layout_constraintBottom_toTopOf="@id/btn_guardar">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/et_Sexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ISexo"
                app:layout_constraintTop_toBottomOf="@id/et_Telefono"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/L_Sexo"
                app:layout_constraintBottom_toTopOf="@id/btn_guardar"/>
                -->

        <Button
        android:id="@+id/btn_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_Reg"
            android:backgroundTint="@color/gray35"
        app:layout_constraintTop_toBottomOf="@id/L_Sexo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>