<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    app:cardCornerRadius="20dp"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/gray10"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/img_view"
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="10dp"
            android:src="@drawable/torre"/>
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/name"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintLeft_toRightOf="@id/img_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/telefono"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/phone"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintLeft_toRightOf="@id/img_view"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/btn_editar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/editar"
            android:textSize="10sp"
            android:drawableLeft="@drawable/edit"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/gray35"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/elimnar"
            app:layout_constraintLeft_toRightOf="@id/img_view"

            />
        <Button
            android:id="@+id/elimnar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/eliminar"
            android:textSize="10sp"
            android:drawableLeft="@drawable/trash"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/gray35"
            app:layout_constraintLeft_toRightOf="@id/btn_editar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/tv_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>